# redis-expert

./: .env-docker  .env-local  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  sample-chat.md
app/: app.py  config.py  embeddings.py  init.py
app/chatbot/: openai.py
app/evaluators/: evaluate.py
app/evaluators/retrieval/: plot.py  retrieval.py
app/ingestion/: chunker.py
app/prompts/: system.py
app/queries/: queries.jsonl
app/store/: pg_vector.py  redis_vector.py
app/utils/: __init__.py  decorators.py  file.py  text.py
scripts/: initialize.py
